# vio-from-datasets

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
demos/: __init__.py  run_synthetic.py
tests/: test_basic.py
tools/: benchmark.py
vio/: __init__.py  camera.py  evaluate.py  geometry.py  io.py  logging_utils.py  pnp_demo.py
vio/datasets/: __init__.py  base.py  euroc.py  tum_vi.py
